# nimrod-embedded

./: .gitignore  INSTALL.md  LICENSE.MIT  README.md  cmake-toolchain-rcc.cmake  setenv-rcc.sh  shell.nix
deploy/: build-bsc.sh  build-environment.yml  build-rcc.sh  build-static.sh  build-tinaroo.sh  deploy.yml  install.yml  inventory.yml  nimexec.j2  nimrod-embedded.j2  nimrod-embedded.lua.j2
nimrun/: CMakeLists.txt  args.cpp  bsc.cpp  config.c.in  config.cpp.in  config.h.in  detect.cpp  ip.cpp  lsf.cpp  minipbs.cpp  minipbs.hpp  nimrod.cpp  nimrun.cpp  nimrun.hpp  pbs.cpp  qpid.cpp  rcc.cpp  scontrol  shell.cpp  slurm.cpp  ssl.cpp  utils.cpp  wiener.cpp
